--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,15 @@
 variants:
   - active
+downsample: true
+downsample_to_size: 1000
+downsample_seed: 1
+n_chunks: 300
 samples: config/samples.tsv
 metadata: config/metadata.tsv
 ref:
   host: ftp://ftp.sra.ebi.ac.uk
   fa_path: /1000g/ftp/technical/reference/GRCh38_reference_genome/GRCh38_full_analysis_set_plus_decoy_hla.fa
   fai_path: /1000g/ftp/technical/reference/GRCh38_reference_genome/GRCh38_full_analysis_set_plus_decoy_hla.fa.fai
+eh_mem_gb: 24
+eh_mem_gb_increment: 2
+download_cram_disk_gb: 24
