--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -2,6 +2,7 @@ import pandas as pd
 
 configfile: "config/config.yaml"
 
+include: "rules/common.smk"
 include: "rules/download.smk"
 include: "rules/genotype.smk"
 include: "rules/parallelism.smk"
