--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -8,6 +8,8 @@ include: "rules/genotype.smk"
 include: "rules/parallelism.smk"
 include: "rules/variant_catalog.smk"
 
+localrules: all, test
+
 
 SAMPLES = pd.read_table(config["samples"]).set_index("Sample", drop=False).join(METADATA)
 VARIANTS = config["variants"] 
