--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 variants:
   - active
-expansionhunter_mode: streaming
+eh_analysis_mode: seeking
 downsample: true
 downsample_to_size: 1000
 downsample_seed: 1
